--- a/src/components/sections/About/about.module.css
+++ b/src/components/sections/About/about.module.css
@@ -49,8 +49,8 @@
   }
   
   .imageBorder img {
-    height: 250px;
-    width: 250px;
+    height: 350px;
+    width: 350px;
   }
   
   .textContainer {
